# SmartTaskAndActivityManagmentAPI

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 024c62c174bb_create_users_table.py  7faa98d92ef0_create_tasks_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
tests/: Notes and saves  conftest.py  test_auth.py  test_tasks.py  utils.py
